# mook-ltd-test

./: .env.local  .env.staging  .flake8  .pre-commit-config.yaml  Makefile  README.md  docker-compose-staging.yaml
.docker/dev/api/: Dockerfile
.docker/dev/nginx/: nginx.conf
api/: .env.local  Makefile  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 067c7ff2f20a_unique_email.py  befbc252e508_sendler.py  e027026022a5_sendler.py  fa77621b9894_init.py
api/src/: dependency.py  exceptions.py  main.py  models.py  settings.py  utils.py
api/src/dispatcher/: models.py
api/src/dispatcher/chat/: manager.py  repository.py  schema.py  service.py
api/src/dispatcher/messages/: models.py
api/src/dispatcher/users/: handlers.py  models.py  repository.py  schema.py  service.py
api/src/dispatcher/users/auth/: handlers.py  schema.py  service.py
api/src/infrastructure/cache/: __init__.py
api/src/infrastructure/database/: __init__.py  accessor.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  apiClient.js  config.js
frontend/src/components/: Chat.js  Footer.js  Header.js  Login.js  Main.js  ProtectedRoute.js  Register.js
