[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Dr1DeX <nesterovarthas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
aiogram = "^3.13.1"
aioredis = "^2.0.1"
celery = "^5.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
greenlet = "^3.1.1"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
